feat(admin): support the edge.core.test event for probing
